[project]
name = "comfyui-version-control"
description = "Kiểm soát các version của Workflow. Chuyên dùng cho Google Colab, để kiểm tra đồng bộ hóa."
version = "1.0.0"
license = { file = "LICENSE.txt" }
dependencies = []

[project.urls]
Repository = "https://github.com/Ranma-2000/ComfyUI-Version-Control"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "betegeuse"
DisplayName = "VersionControl"
Icon = ""
